@@ -98,7 +98,8 @@ BA 27- [libpari] ZpX_ZpXQ_liftroot, ZpX_ZpXQ_liftroot_ea
    29- ellformalw, ellformalpoint, ellformaldifferential,
        ellformallog, ellformalexp, ellnonsingularmultiple, ellpadicheight,
        ellpadicheightmatrix, ellpadics2, ellpadiclog
-BA 30- [libpari] function FpX_powu
+BA 30- [libpari] functions FpX_powu, FpX_digits, FpX_fromdigits,
+                 FpXQX_powu, FpXQX_digits, FpXQX_fromdigits
 BA 31- GP functions ellpadicfrobenius, hyperellpadicfrobenius
    32- [libpari] function RgX_normalize
 BA 33- much faster matfrobenius/minpoly(t_MAT)
